Organized imports, More calls updated
-Added index.js files to simplify imports
-Simpified imports for @material-ui/icons
-Moved tab title declarations to the route component
-Updated more calls
